--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.1.0",
   "license": "MIT",
   "scripts": {
-    "build": "gatsby build",
+    "build": "gatsby build --prefix-paths",
     "gatsby": "gatsby",
     "develop": "gatsby develop",
     "format": "prettier --write src/**/*.{js,jsx}",
