--- a/.github/workflows/gatsby_publish.yaml
+++ b/.github/workflows/gatsby_publish.yaml
@@ -10,8 +10,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
-      - uses: enriikke/gatsby-gh-pages-action@v2
+      - name: Setup Node
+        uses: actions/setup-node@v1
         with:
-          access-token: ${{ secrets.ACCESS_TOKEN }}
-          deploy-branch: gh-pages
-          gatsby-args: -- --prefix-paths
+          node-version: '12.x'
+      - name: build
+        run: |
+          npm ci
+          npm run build -- --prefix-paths
+      - uses: peaceiris/actions-gh-pages@v2
+        with:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          PUBLISH_BRANCH: gh-pages
+          PUBLISH_DIR: ./public
